--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "@types/node": "^14.14.37"
   },
   "dependencies": {
+    "google-auth-library": "^7.0.3",
     "json5": "^2.2.0",
     "node-fetch": "^2.6.1",
     "ws": "^7.4.4"
